added contactPage and projectsPage

--- a/components/Molecules/ContactPageWrapper/rwd.module.scss
+++ b/components/Molecules/ContactPageWrapper/rwd.module.scss
@@ -5,21 +5,14 @@
 }
 @media only screen and (min-width: 769px) {
   .wrapper {
-    height: calc(100vh - 50px);
-    margin: 25px;
-
-    &Main {
-      height: calc(100vh - 162px);
-    }
+    padding: 30px;
   }
 }
 @media only screen and (min-width: 1100px) {
   .wrapper {
-    height: calc(100vh - 138px);
-    margin: 69px;
-
-    &Main {
-      height: calc(100vh - 251px);
+    padding: 0 3% 0 5%;
+    &Form {
+      width: 60%;
     }
   }
 }
