--- a/components/Atoms/HomePageMobileNav/styles.module.scss
+++ b/components/Atoms/HomePageMobileNav/styles.module.scss
@@ -1,16 +1,15 @@
 .wrapper {
-  position: fixed;
+  position: absolute;
   left: 0;
-  top: 66px;
-  z-index: 11;
+  top: 55px;
+  z-index: 15;
   display: flex;
   justify-content: center;
   flex-direction: column;
 
   width: 100%;
-  padding: 0 10px;
 
-  background-color: var(--black-color);
+  background-color: var(--mobile-nav);
 
   list-style: none;
 
@@ -21,8 +20,7 @@
   &Nav {
     width: 100%;
     height: 56px;
-    border-right: var(--border);
-    border-left: var(--border);
+
     border-bottom: var(--border);
 
     font-weight: 500;
@@ -33,7 +31,7 @@
 
       width: 100%;
       height: 100%;
-      margin-left: 30px;
+      padding-left: 30px;
 
       color: var(--white-color);
     }
