--- a/components/Atoms/ProjectsPageTechContent/rwd.module.scss
+++ b/components/Atoms/ProjectsPageTechContent/rwd.module.scss
@@ -5,21 +5,12 @@
 }
 @media only screen and (min-width: 769px) {
   .wrapper {
-    height: calc(100vh - 50px);
-    margin: 25px;
-
-    &Main {
-      height: calc(100vh - 162px);
-    }
+    width: 45%;
   }
 }
 @media only screen and (min-width: 1100px) {
   .wrapper {
-    height: calc(100vh - 138px);
-    margin: 69px;
-
-    &Main {
-      height: calc(100vh - 251px);
-    }
+    width: 100%;
+    margin-top: 30px;
   }
 }
