--- a/components/Layout/Layout/styles.module.scss
+++ b/components/Layout/Layout/styles.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
 
   height: calc(100vh - 20px);
+  min-height: 820px;
   margin: 10px;
   border: var(--border);
   border-radius: 8px;
@@ -15,6 +16,7 @@
     top: 56px;
 
     width: 100%;
+    min-height: calc(820px - 114px);
     height: calc(100vh - 132px);
   }
 }
