--- a/components/Atoms/ProjectsPageTechContent/styles.module.scss
+++ b/components/Atoms/ProjectsPageTechContent/styles.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 100%;
+  width: 95%;
   margin: 10px 15px 5px 5px;
 
   &Image {
@@ -17,9 +17,21 @@
     width: 100%;
     margin-top: -4px;
     padding: 20px;
+
     border: var(--border);
     border-radius: 15px;
 
+    &Title {
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
+
+      margin-bottom: 20px;
+      padding-bottom: 20px;
+      border-bottom: var(--border);
+
+      font-size: 24px;
+    }
     &Details {
       height: 60px;
     }
